bib: new source of information
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -15,6 +15,12 @@
   urldate = {2022-12-23}
 }
 
+@ONLINE{chatgpt,
+  title = {{ChatGPT}},
+  url = {https://chat.openai.com/chat},
+  urldate = {2022-12-24}
+}
+
 @ONLINE{RosDoc,
   title = {{ROS2 documentation}},
   url = {https://docs.ros.org/en/humble/index.html},
