--- a/includes/core.tex
+++ b/includes/core.tex
@@ -104,27 +104,33 @@ Pri všetkých týchto zlepšeniach nemôžeme zabudnúť aj nasledovný nedosta
 Pridaním veľkého počtu funkcionalít začal vznikať problém pre začiatočníkov s porozumením niektorých kódov. Avšak tento problém je nedostatkom,
 ktorý časom zanikne. V čase písania tejto prace pribudli na stránke dokumentácie 2 strany popisujúce pokročilejšie Funkcionality druhej verzie ROSu.
 
-\subsection{Rozdiely v kóde}
+\subsection{Rozdiely}
 
 Čo je určite dobrou správou pre všetkých programátorov, ktorí robili v prvej verzii a sú zvyknutí na jej štandardy a funkcionalitu sa nemajú čoho obávať.
-Prechod z ROS1 na ROS2 je dosť priamočiari. Čo sa zmenilo je spôsob písania kódu, ale koncepty funkcionality ostali všetky rovnaké. V tejto sekcii nebudeme
-písať konkrétne kódy, budeme len opisovať čo je podobné a čo zasa rozdielne medzi verziami spomínaného systému.
+Prechod z ROS1 na ROS2 je dosť priamočiary. Čo sa zmenilo je spôsob písania kódu, ale koncepty funkcionality ostali všetky rovnaké. V tejto sekcii nebudeme
+písať konkrétne kódy, budeme len opisovať čo je podobné a čo zasa rozdielne medzi verziami spomínaného systému. Keďže celý projekt bol písaný v programovacom
+jazyku C++ tak sa aj tieto zmeny budu týkať hlavne C++.
 
 \begin{itemize}
-	\item \textbf{Štandard} \newline
+	\item \textbf{Štandard jazyka} \newline
 		Pokým ROS1 bola písaná v štandarde C++98 tak ROS2 je už písaná v novom štandarde. To zahŕňa inicializovanie templatov a ich použivanie. Definície
 		a deklarácie templatov sú na knihu samú o sebe, preto do detailov nebudeme zachádzať. Stačí nám vedieť, ako ich inicializovať. V prvej verzii
-		sme definovali publishera (publikovateľa) všeobecného a definovali sme mu cez aký topic má posielať spravy. V druhej verzii naväzujeme publishera
+		sme definovali publishera (publikovateľa) všeobecného a definovali sme mu cez aký topic má posielať správy. V druhej verzii naväzujeme publishera
 		na špecifický tip správy akú posielame. Nemôže sa teda stať, že takýto program by sme skompilovali a následne keď ho spustíme tak by spadol.
+
+	\item \textbf{Inicializácia nody} \newline
+		Tak isto ako v prvej verzii aj v druhej verzii musíme definovať nodu. Rozdiel je v tom, že prvá verzia obsahovala NodeHandle a druha verzia obsahuje priamo Node.
+		V druhej verzii je zaužívaným štandardom tuto nodu precediť a použiť polymorfizmus pri objekte, ktorý musí existovať počas celej doby vykonávania programu. Pri
+		prvej verzii tomu tak nebolo. Museli sme vytvoriť už spomenutý NodeHandle. Ten sa nemusel využiť ako base trieda a nemusel ani existovať počas celého behu programu.
 
 	\item \textbf{Komunikácia} \newline
 		DDS (Služba distribúcie údajov) je stredný protokol používaný v ROS2 na komunikáciu medzi uzlami. Je to systém správ
 		publikovania (publish) / odoberania (subscribe), ktorý umožňuje uzlom komunikovať medzi sebou bez toho, aby poznali identitu ostatných uzlov. DDS je
 		štandardný protokol, ktorý sa okrem ROS2 používa vo viacerých odvetviach. \cite{chatgpt} Druh komunikácie je v ROS2 rozšírený ešte o akcie \ref{s_action}.
 
-	\item \textbf{Vlakna} \newline
+	\item \textbf{Vlákna} \newline
 		Prvá verzia ROSu je založená na jedno vláknovom, synchrónnom komunikačnom modeli, zatiaľ čo ROS2 je založený na viac vláknovom, asynchrónnom
-		komunikačnom modeli.
+		komunikačnom modeli. Táto zmena znateľne zrýchľuje program, ale prináša väčšiu komplexnosť do programu.
 
 \end{itemize}
 
@@ -260,3 +266,4 @@ main()
 	printf("Hello World");
 }
 \end{lstlisting}
+
