start writing about robot and rename exmaple_URK to main
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -27,6 +27,12 @@
   urldate = {2022-12-23}
 }
 
+@manual{timovyProjekt,
+  author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
+  title = {Mobilný podstavec pre robota},
+  year = {2019}
+}
+
 @ONLINE{t00,
   editor = {Bratková, Eva},
   editortype={compiler},
@@ -207,9 +213,11 @@ location = {Praha},
 publisher = {Academia},
 isbn = {978-3-16-148410-0}
 }
+
 @INCOLLECTION{prispevok,
 crossref = {zbornik},
 title = {Velmi zajímavý článek},
 author = {Vlaštovka, Josef},
 pages = {22-45}
 }
+
