--- a/includes/core.tex
+++ b/includes/core.tex
@@ -112,32 +112,42 @@ písať konkrétne kódy, budeme len opisovať čo je podobné a čo zasa rozdie
 jazyku C++ tak sa aj tieto zmeny budu týkať hlavne C++.
 
 \subsubsection{Štandard jazyka}
+
 	Pokým ROS1 bola písaná v štandarde C++98 tak ROS2 je už písaná v novom štandarde. To zahŕňa inicializovanie templatov a ich použivanie. Definície
 	a deklarácie templatov sú na knihu samú o sebe, preto do detailov nebudeme zachádzať. Stačí nám vedieť, ako ich inicializovať. V prvej verzii
 	sme definovali publishera (publikovateľa) všeobecného a definovali sme mu cez aký topic má posielať správy. V druhej verzii naväzujeme publishera
 	na špecifický tip správy akú posielame. Nemôže sa teda stať, že takýto program by sme skompilovali a následne keď ho spustíme tak by spadol.
 
 \subsubsection{Inicializácia nody}
+
 	Tak isto ako v prvej verzii aj v druhej verzii musíme definovať nodu. Rozdiel je v tom, že prvá verzia obsahovala NodeHandle a druha verzia obsahuje priamo Node.
 	V druhej verzii je zaužívaným štandardom tuto nodu precediť a použiť polymorfizmus pri objekte, ktorý musí existovať počas celej doby vykonávania programu. Pri
 	prvej verzii tomu tak nebolo. Museli sme vytvoriť už spomenutý NodeHandle. Ten sa nemusel využiť ako base trieda a nemusel ani existovať počas celého behu programu.
 
 \subsubsection{Komunikácia}
+
 	DDS (Služba distribúcie údajov) je stredný protokol používaný v ROS2 na komunikáciu medzi uzlami. Je to systém správ
 	publikovania (publish) / odoberania (subscribe), ktorý umožňuje uzlom komunikovať medzi sebou bez toho, aby poznali identitu ostatných uzlov. DDS je
 	štandardný protokol, ktorý sa okrem ROS2 používa vo viacerých odvetviach. \cite{chatgpt} Druh komunikácie je v ROS2 rozšírený ešte o akcie \ref{s_action}.
 
 \subsubsection{Vlákna}
+
 	Prvá verzia ROSu je založená na jedno vláknovom, synchrónnom komunikačnom modeli, zatiaľ čo ROS2 je založený na viac vláknovom, asynchrónnom
 	komunikačnom modeli. Táto zmena znateľne zrýchľuje program, ale prináša väčšiu komplexnosť do programu.
 
 \subsubsection{Kompilácia}
+
 	Zmenou verzii sa zmenil aj spôsob kompilácie programu. ROS1 bol skompilovaný pomocou \texttt{catkin} build systému. Catkin je založený na programe
 	\texttt{cmake}. Jeho nastavenie dependencií je konfigurované pomocou súboru \texttt{package.xml} . ROS2 prešiel na viac nastaviteľný systém \texttt{Colcon}.
 	Tento systém je na rozdiel od catkinu založený na Pythone a jeho dependencie sa nastavujú pomocou \texttt{setup.py} súboru. V prípade colconu si môžeme definovať
 	spôsob kompilácie t.j. môžeme nastaviť, ako sa budú spracovávať dependencie. Jednou s najviac používaných možností je \texttt{ament\_cmake}. Je založený
 	na cmaku a spolupracuje s colconom. Medze ament\_cmake je založený na cmaku vieme mu definovať dependencie pomocou xml súboru ako v ROS1. Je to jeden zo spôsobov,
 	ako zmenšiť rozdiel medzi ROS1 a ROS2.
+
+\section{Robot}
+
+Robot, s ktorym sme pracovali bol vysledkom timoveho projektu viacerych studentov. Pri vysvetlovani a opisovani robota sa budeme odvolavat na dokumenty, stranky a kod,
+ktore napisali. Vsetky tieto udaje su spirstupnene na robote v zalozke \texttt{\$(HOME)/Desktop/Blackmetal}. \cite{timovyProjekt}
 
 \subsection{Lorem Ipsum}
 Tento text bol prevzaty zo stranky \url{www.lipsum.com} \cite{lipsum}, preto ho treba riadne odcitovat.
