core: basic robot info
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/core.tex
+++ b/includes/core.tex
@@ -88,7 +88,7 @@ Podstata toho, ako sú zoskupované uzly a ako spolu komunikujú je diametrálne
 ktorý zabezpečuje kompatibilitu medzi verziami. Nie je to ale trvalé riešenie. Odporúčané je nástroj využívať a počas toho prepisovať kód
 z verzie 1 do verzie 2. Komunikácia prebieha \newline v ROS2 rovnakým spôsobom ako v ROS1. Pomocou topikov, služieb a akcií.
 
-Táto podobnosť končí na najvyššej vrstve. Ako sme videli na Obr.~\ref{struktury}. Štruktúra ROS2 je rozdelená do viacerých vrstiev.
+Táto podobnosť končí na najvyššej vrstve. Ako sme videli na Obr.~\ref{o_struktury}. Štruktúra ROS2 je rozdelená do viacerých vrstiev.
 Najdôležitejšie je pre nás vedieť, že komunikácia je spracovávaná modelom DDS (Služba distribúcie údajov) z anglického (\acrlong{DDS}). Tento model zlepšuje výkon, stabilitu
 a bezpečnosť modelu oproti ROS1. Je založený na TCP/UDP protokole. Z obrázku vyčítame aj lepšie rozloženie modulov. To zabezpečuje jednoduchšie
 prispôsobovanie systému pre nové funkcionality. Podpora operačných systémov sa v ROS2 rozšírila aj o Windows, Mac OS či operačné systémy reálneho času.
@@ -146,8 +146,10 @@ jazyku C++ tak sa aj tieto zmeny budu týkať hlavne C++.
 
 \section{Robot}
 
-Robot, s ktorym sme pracovali bol vysledkom timoveho projektu viacerych studentov. Pri vysvetlovani a opisovani robota sa budeme odvolavat na dokumenty, stranky a kod,
-ktore napisali. Vsetky tieto udaje su spirstupnene na robote v zalozke \texttt{\$(HOME)/Desktop/Blackmetal}. \cite{timovyProjekt}
+Robot, s ktorým sme pracovali bol výsledkom tímového projektu viacerých študentov. Pri vysvetľovaní a opisovaní robota sa budeme odvolávať na dokumenty, stránky a kód,
+ktorý napísali. Všetky tieto údaje si sprístupnené na robote v záložke \texttt{\$(HOME)/Desktop/Blackmetal}~\cite{timovyProjekt}.
+
+
 
 \subsection{Lorem Ipsum}
 Tento text bol prevzaty zo stranky \url{www.lipsum.com} \cite{lipsum}, preto ho treba riadne odcitovat.
