core: komunikacia s robotom
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -33,6 +33,12 @@
   year = {2019}
 }
 
+@manual{BMdoc,
+  author = {{Bc. Marek Pacalaj, Bc. Tomáš Kútik, Bc. Dominik Gula, Bc. Dávid Pavlič, Bc. Daniel Ďurkovič}},
+  title = {Dokumentacia k softwaru robota BlackMetal},
+  year = {2019}
+}
+
 @ONLINE{t00,
   editor = {Bratková, Eva},
   editortype={compiler},
