--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -39,6 +39,14 @@
   year = {2019}
 }
 
+@manual{EPOSdoc,
+  author = {{Maxon}},
+  title = {EPOS Command Library},
+  subtitle = {Document ID: rel6806},
+  month = {November},
+  year = {2019}
+}
+
 @ONLINE{t00,
   editor = {Bratková, Eva},
   editortype={compiler},
