bib: odvolavky na datasheety k jednotlivym castiam robota
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/bibliography.bib
+++ b/includes/bibliography.bib
@@ -39,6 +39,48 @@
   year = {2019}
 }
 
+@online{menic,
+  title = {{EPOS2 Positioning Controllers}},
+  url = {https://www.maxongroup.com/medias/sys_master/root/8831294472222/2018EN-457-458-459-461.pdf},
+  urldate = {2022-12-26}
+}
+
+@online{encoder,
+  title = {{Encoder MR Type L, 256–1024 CPT, 3 channels, with line driver}},
+  url = {https://innodrive.ru/downloads.php?file=/wp-content/uploads/files/maxon/sensor/15032-EN-21-479.pdf},
+  urldate = {2022-12-26}
+}
+
+@online{prevodovka,
+  title = {{Details Planetary Gearhead GP 42 C Ø42 mm, 3 - 15 Nm, Ceramic Version}},
+  url = {https://www.maxongroup.com/maxon/view/product/gear/planetary/gp42/203120},
+  urldate = {2022-12-26}
+}
+
+@online{motor,
+  title = {{Details RE 40 Ø40 mm, Graphite Brushes, 150 Watt}},
+  url = {https://www.maxongroup.com/maxon/view/product/motor/dcmotor/re/re40/148867},
+  urldate = {2022-12-26}
+}
+
+@online{robotPc,
+  title = {{MIO-5272}},
+  url = {https://www.mouser.sk/datasheet/2/638/MIO-5272_DS(01.17.18)20180118153722-1570123.pdf},
+  urldate = {2022-12-26}
+}
+
+@online{extensionModule,
+  title = {{MIO-210}},
+  url = {https://advdownload.advantech.com/productfile/PIS/MIOe-210/Product%20-%20Datasheet/MIOe-210_220_230_110_120_PWR1_DS(03.26.14)20140327095019.pdf},
+  urldate = {2022-12-26}
+}
+
+@online{arduinoUno,
+  title = {{Arduino Uno datasheet}},
+  url = {https://docs.arduino.cc/resources/datasheets/A000066-datasheet.pdf},
+  urldate = {2022-12-26}
+}
+
 @manual{EPOSdoc,
   author = {{Maxon}},
   title = {EPOS Command Library},
